--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - /opt/chefdk/embedded/bin/foodcritic --version
   - /opt/chefdk/embedded/bin/foodcritic . --exclude spec
   - /opt/chefdk/embedded/bin/rspec
-  - KITCHEN_LOCAL_YAML=.kitchen.dokken.yml kitchen verify ${INSTANCE}
+  - KITCHEN_LOCAL_YAML=.kitchen.dokken.yml kitchen test
 
 after_script:
   - docker images
