--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,7 +5,7 @@ driver:
     memory: 2048
 
 provisioner:
-  name: chef_solo
+  name: chef_zero
 
 platforms:
   - name: ubuntu-14.04
@@ -19,14 +19,5 @@ platforms:
 suites:
   - name: default
     run_list:
+      - recipe[deepsql_service_test::single]
     attributes:
-#  - name: service56-single
-#    run_list:
-#    - recipe[deepsql_service_test::single]
-#    includes: [
-#      'ubuntu-14.04'
-#    ]
-#    attributes:
-#      mysql:
-#       version: '5.6.28'
-
